# dilivery-ponny-express

./: .README.md.swp  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
internal/: config.py  depends.py  main.py
internal/schemas/: orders.py
internal/services/: pony_express.py
