[project]
name = "dilivery-ponny-express"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.9",
    "uvicorn>=0.34.0",
    "xmltodict>=0.14.2",
    "zeep>=4.3.1",
]
